--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,6 @@
     <!--<properties>
         <wicket.version>1.3.2</wicket.version>
         <jetty.version>6.1.4</jetty.version>
-    </properties>-->
+    </properties>--
 
 </project>
