More messages, more game logic and the beginnings of a management gui

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <version>7.5.0.v20110901</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.19</version>
+        </dependency>
     </dependencies>
 
     <build>
