--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
             <version>1.12</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.eclipse.jetty.aggregate</groupId>
             <artifactId>jetty-all-server</artifactId>
             <version>7.5.0.v20110901</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.jfree</groupId>
